Fix chart spacing

--- a/src/Chart/index.scss
+++ b/src/Chart/index.scss
@@ -12,3 +12,13 @@
     max-height: 100%;
   }
 }
+
+.chart {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  &__container {
+    flex-grow: 1;
+  }
+}
